
2010-05-14  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Add a calendar view
	* misc: Enable landscape orientation everywhere

2010-05-09  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: start/due/completion dates now include time as well.
	* misc: Better UI for picking date/time
	* misc: Fix a bug related to local/GMT time
	* misc: Fix a small selection bug when showing completed tasks

==== Release 2.0: 2010-04-05 ====

2010-04-10  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Added partial translations for Thaï and Czech

2010-04-10  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Added German translation

==== Beta 3: 2010-03-27====

2010-03-27  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Fix a crash when deleting a task through a "wipe" gesture
	* misc: Add a search bar in task view

==== Beta 2: 2010-03-17 ====

2010-03-14  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: removed badges.
	* misc: When selecting a category, also show tasks that only belong to one
	  of their subcategories.

2010-03-07  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Speed up category view
	* CategoryViewController: fix a display bug that prevented the badges from
	  refreshing in some cases.
	* misc: More intuitive task view. When viewing tasks belonging to a category,
	  subtasks that belong to that category are also shown, except if one of
	  their ancestors belongs to the same category. The previous behaviour was
	  to only show top-level tasks belonging to the category, so people using
	  subcategories for subtasks would not see anything when selecting the
	  subcategory...
	* misc: Badges now only show total count and due soon count, for performance
	  reasons.

2010-02-28  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>