@@ -231,6 +231,8 @@
 			<key>Layout</key>
 			<array>
 				<dict>
+					<key>BecomeActive</key>
+					<true/>
 					<key>ContentConfiguration</key>
 					<dict>
 						<key>PBXBottomSmartGroupGIDs</key>
@@ -267,7 +269,6 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateExpansionKey</key>
 							<array>
 								<string>29B97314FDCFA39411CA2CEA</string>
-								<string>080E96DDFE201D6D7F000001</string>
 								<string>1C37FBAC04509CD000000102</string>
 								<string>1C77FABC04509CD000000102</string>
 								<string>1C3E0DCA080725EA00A55177</string>
@@ -275,8 +276,6 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
-									<integer>18</integer>
-									<integer>1</integer>
 									<integer>0</integer>
 								</array>
 							</array>
@@ -309,14 +308,12 @@
 					<key>Dock</key>
 					<array>
 						<dict>
-							<key>BecomeActive</key>
-							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
 								<string>A68EDEBA0F1E1EED00F51FF2</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>TaskViewController.m</string>
+								<string>CHANGELOG</string>
 								<key>PBXSplitModuleInNavigatorKey</key>
 								<dict>
 									<key>Split0</key>
@@ -324,11 +321,11 @@
 										<key>PBXProjectModuleGUID</key>
 										<string>A68EDEBB0F1E1EED00F51FF2</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>TaskViewController.m</string>
+										<string>CHANGELOG</string>
 										<key>_historyCapacity</key>
 										<integer>0</integer>
 										<key>bookmark</key>
-										<string>A6340A44119FCA4900C36DA3</string>
+										<string>A6AB11FB119FCF9D003E9393</string>
 										<key>history</key>
 										<array>
 											<string>A68A605910821E7E00D723FE</string>
@@ -442,17 +439,14 @@
 											<string>A6AC17611196CF82001B11B0</string>
 											<string>A6197DBE1196F84B007140EB</string>
 											<string>A6197DBF1196F84B007140EB</string>
-											<string>A6197DF31196FB90007140EB</string>
 											<string>A6197DF41196FB90007140EB</string>
 											<string>A6B18B11119D234900685C23</string>
 											<string>A6B18B27119D23D300685C23</string>
 											<string>A6B18B38119D24AE00685C23</string>
 											<string>A65D1BF8119D3E3100F0F5C3</string>
-											<string>A65D1C15119D40D300F0F5C3</string>
 											<string>A65D1C17119D40D300F0F5C3</string>
 											<string>A65D1C18119D40D300F0F5C3</string>
 											<string>A65D1C31119D42E000F0F5C3</string>
-											<string>A65D1C32119D42E000F0F5C3</string>
 											<string>A65D1C5F119D4A9400F0F5C3</string>
 											<string>A65D1C60119D4A9400F0F5C3</string>
 											<string>A65D1C64119D4A9400F0F5C3</string>
@@ -471,7 +465,6 @@
 											<string>A69C9686119D952D004CC272</string>
 											<string>A69C9688119D952D004CC272</string>
 											<string>A664542E119D98F500280B03</string>
-											<string>A61A55FF119FB94B0036FC56</string>
 											<string>A61A5600119FB94B0036FC56</string>
 											<string>A61A5601119FB94B0036FC56</string>
 											<string>A61A5602119FB94B0036FC56</string>
@@ -483,7 +476,13 @@
 											<string>A69F7DE3119FBC8A0045AEFB</string>
 											<string>A6EFE8CB119FC90E00C8EC79</string>
 											<string>A6EFE8CC119FC90E00C8EC79</string>
-											<string>A6340A3F119FCA4800C36DA3</string>
+											<string>A606E426119FCD22002C7D4F</string>
+											<string>A6E666DD119FCE66003F4F36</string>
+											<string>A6E666DE119FCE66003F4F36</string>
+											<string>A6E666DF119FCE66003F4F36</string>
+											<string>A6E6670F119FCF14003F4F36</string>
+											<string>A6AB11F9119FCF9D003E9393</string>
+											<string>A6AB11FA119FCF9D003E9393</string>
 										</array>
 									</dict>
 									<key>SplitCount</key>
@@ -606,11 +605,11 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A6340A41119FCA4800C36DA3</string>
+				<string>A6AB11FC119FCF9D003E9393</string>
 				<string>1CA23ED40692098700951B8B</string>
-				<string>A6340A42119FCA4800C36DA3</string>
+				<string>A6AB11FD119FCF9D003E9393</string>
 				<string>A68EDEBA0F1E1EED00F51FF2</string>
-				<string>A6340A43119FCA4800C36DA3</string>
+				<string>A6AB11FE119FCF9D003E9393</string>
 				<string>1CA23EDF0692099D00951B8B</string>
 				<string>1CA23EE00692099D00951B8B</string>
 				<string>1CA23EE10692099D00951B8B</string>
@@ -759,14 +758,14 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A6EFE8CF119FC90E00C8EC79</string>
+				<string>A6E666E2119FCE66003F4F36</string>
 				<string>1CCC7628064C1048000F2A68</string>
 				<string>1CCC7629064C1048000F2A68</string>
-				<string>A6EFE8D0119FC90E00C8EC79</string>
-				<string>A6EFE8D1119FC90E00C8EC79</string>
-				<string>A6EFE8D2119FC90E00C8EC79</string>
-				<string>A6EFE8D3119FC90E00C8EC79</string>
-				<string>A6EFE8D4119FC90E00C8EC79</string>
+				<string>A6E666E3119FCE66003F4F36</string>
+				<string>A6E666E4119FCE66003F4F36</string>
+				<string>A6E666E5119FCE66003F4F36</string>
+				<string>A6E666E6119FCE66003F4F36</string>
+				<string>A6E666E7119FCE66003F4F36</string>
 			</array>
 			<key>ToolbarConfigUserDefaultsMinorVersion</key>
 			<string>2</string>
@@ -1536,8 +1535,12 @@
 			<string>50 850 472 307 0 0 1440 877</string>
 		</dict>
 		<dict>
+			<key>FirstTimeWindowDisplayed</key>
+			<false/>
 			<key>Identifier</key>
 			<string>windowTool.classBrowser</string>
+			<key>IsVertical</key>
+			<true/>
 			<key>Layout</key>
 			<array>
 				<dict>
@@ -1545,7 +1548,7 @@
 					<array>
 						<dict>
 							<key>BecomeActive</key>
-							<integer>1</integer>
+							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>OptionsSetName</key>
@@ -1558,7 +1561,7 @@
 							<key>GeometryConfiguration</key>
 							<dict>
 								<key>ClassesFrame</key>
-								<string>{{0, 0}, {369, 96}}</string>
+								<string>{{0, 0}, {364, 96}}</string>
 								<key>ClassesTreeTableConfiguration</key>
 								<array>
 									<string>PBXClassNameColumnIdentifier</string>
@@ -1567,9 +1570,9 @@
 									<real>22</real>
 								</array>
 								<key>Frame</key>
-								<string>{{0, 0}, {616, 353}}</string>
+								<string>{{0, 0}, {616, 354}}</string>
 								<key>MembersFrame</key>
-								<string>{{0, 105}, {369, 395}}</string>
+								<string>{{0, 101}, {364, 253}}</string>
 								<key>MembersTreeTableConfiguration</key>
 								<array>
 									<string>PBXMemberTypeIconColumnIdentifier</string>
@@ -1577,14 +1580,12 @@
 									<string>PBXMemberNameColumnIdentifier</string>
 									<real>216</real>
 									<string>PBXMemberTypeColumnIdentifier</string>
-									<real>94</real>
+									<real>87</real>
 									<string>PBXMemberBookColumnIdentifier</string>
 									<real>22</real>
 								</array>
-								<key>PBXModuleWindowStatusBarHidden2</key>
-								<integer>1</integer>
 								<key>RubberWindowFrame</key>
-								<string>597 125 616 374 0 0 1280 1002 </string>
+								<string>83 987 616 374 0 0 2560 1418 </string>
 							</dict>
 							<key>Module</key>
 							<string>PBXClassBrowserModule</string>
@@ -1603,17 +1604,21 @@
 				<string>PBXClassBrowserModule</string>
 			</array>
 			<key>StatusbarIsVisible</key>
-			<integer>0</integer>
+			<false/>
 			<key>TableOfContents</key>
 			<array>
-				<string>1C78EABA065D492600B07095</string>
-				<string>1C78EABB065D492600B07095</string>
+				<string>A606E40C119FCC8B002C7D4F</string>
+				<string>A606E40D119FCC8B002C7D4F</string>
 				<string>1CA6456E063B45B4001379D8</string>
 			</array>
 			<key>ToolbarConfiguration</key>
 			<string>xcode.toolbar.config.classbrowser</string>
 			<key>WindowString</key>
-			<string>597 125 616 374 0 0 1280 1002 </string>
+			<string>83 987 616 374 0 0 2560 1418 </string>
+			<key>WindowToolGUID</key>
+			<string>A606E40C119FCC8B002C7D4F</string>
+			<key>WindowToolIsVisible</key>
+			<false/>
 		</dict>
 		<dict>
 			<key>Identifier</key>
