@@ -1,4 +1,8 @@
 
+2010-05-16  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
+	* misc: Add a search bar in the calendar view
+	* misc: Add a setting to hide disabled tasks
+
 2010-05-14  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
 	* misc: Add a calendar view
 	* misc: Enable landscape orientation everywhere
